Fixed css flickering

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -11,7 +11,9 @@ body {
 }
 
 html {
+  -webkit-transform:translate3d(0,0,0);
   font-size: 30px;
+ 
 }
 
 @media screen and (min-device-width: 1024px) {
